# ros-cicd-project

./: Dockerfile  buildspec.yml  scenarios.json
lambda functions/: checkStatus.py  errorLaunchingSimulations.py  processAndLaunchBatchSimulations.py  sendSimSummary.py  stepfunction.json  triggerStepFunctions.py
robot_ws/: .rosinstall
robot_ws/src/hello_world_robot/: CMakeLists.txt  package.xml
robot_ws/src/hello_world_robot/launch/: rotate.launch  rotate_test.launch
robot_ws/src/hello_world_robot/nodes/: rotate.py  rotate_test.py
simulation_ws/: .rosinstall
simulation_ws/src/hello_world_simulation/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/hello_world_simulation/nodes/: rotate.py  rotate_test.py
